feat: added Help section and solved menu transition issues | fix: ClearScreenAction got an overhaul | fix: QUeries return a String table instead of a ResultSet